--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -41,7 +41,7 @@
 \section*{Introduction}
 In recent years, with the rapid advancement of AI and the ease of generating fake images, “deepfakes” have emerged as a significant threat. These digitally altered images, videos, and audios impact not only celebrities but also everyday individuals. This issue has gained particular attention in Korea, where deepfake crimes have reached unprecedented levels. The number of underage victims has increased 4.5 times, from 64 in 2022 to 288 over the past two years, while the total number of victims grew 3.7 times, rising from 212 to 781 during that same period according to \href{https://en.yna.co.kr/view/AEN20240828003100315}{[Yonhap News Agency]}. This alarming growth inspired us to focus on developing a solution to detect deepfake images in hopes to help combat this growing concern.
 
-Our objective is to build an accurate deepfake facial image detector by training and comparing the performance of various models. To accomplish this, we plan to utilize this \href{https://www.kaggle.com/datasets/manjilkarki/deepfake-and-real-images}{[Kaggle dataset]}, which contains approximately 190,000 facial images. We will split the dataset into two parts: 80\% for training and 20\% for validation. The models we intend to use include EfficientNet and ResNet50, among others. Once trained, the models will be analyzed thoroughly to evaluate their effectiveness. Depending on the results, we may further extend the scope of our project.
+Our objective is to build an accurate deepfake facial image detector by training and comparing the performance of various models. To accomplish this, we plan to utilize this \href{https://www.kaggle.com/datasets/manjilkarki/deepfake-and-real-images}{[Kaggle dataset]}, which contains approximately 190,000 facial images. We will split the dataset into two parts: 80\% for training and 20\% for validation. The models we intend to use include EfficientNetB0 and ResNet50, among others. Once trained, the models will be analyzed thoroughly to evaluate their effectiveness. Depending on the results, we may further extend the scope of our project.
 
 You can follow the progress of our project on our \href{https://github.com/konradwojda/HYU-AI-G08}{[Github]}.
 
@@ -67,9 +67,9 @@ The dataset was processed to optimize outcomes for analysis. Each image is a 256
 \section*{Methodology}
 
 \subsection*{Selected CNN Models}
-For this project, we chose to train and evaluate two convolutional neural network (CNN) architectures: EfficientNet (B0) and ResNet50. These models are well-regarded for their strong feature extraction capabilities and efficiency, making them suitable for the computational demands of deepfake image detection. By comparing these two architectures, we aimed to determine which model performs better for detecting deepfakes.
+For this project, we chose to train and evaluate two convolutional neural network (CNN) architectures: EfficientNetB0 and ResNet50. These models are well-regarded for their strong feature extraction capabilities and efficiency, making them suitable for the computational demands of deepfake image detection. By comparing these two architectures, we aimed to determine which model performs better for detecting deepfakes.
 
-EfficientNet employs a compound scaling method that systematically balances the network's depth, width, and resolution. This innovative approach achieves superior accuracy with fewer parameters compared to traditional models. EfficientNet's ability to efficiently handle subtle variations in images makes it ideal for identifying the fine-grained manipulations typical of deepfake images.
+EfficientNetB0 employs a compound scaling method that systematically balances the network's depth, width, and resolution. This innovative approach achieves superior accuracy with fewer parameters compared to traditional models. EfficientNetB0's ability to efficiently handle subtle variations in images makes it ideal for identifying the fine-grained manipulations typical of deepfake images.
 
 ResNet50, known for its introduction of residual connections addresses the vanishing gradient problem that arises in deeper networks. These connections allow the model to learn intricate patterns in data, enabling it to effectively distinguish real images from deepfakes. ResNet50's robust architecture is particularly advantageous for analyzing the high levels of detail often present in manipulated images.
 
@@ -91,9 +91,9 @@ In this section, the code will be described. For detailed explanations of all pa
     The script defines the \texttt{DeepFakeDataset} class, a custom PyTorch dataset for loading deepfake images. It takes a root directory containing "Real" and "Fake" subdirectories and generates a list of image file paths with corresponding labels (0 for real images and 1 for fake images). The class supports optional image transformations and provides methods to retrieve the dataset length and individual image-label pairs, making it suitable for loading data in model training and evaluation.
 
     \subsection*{train.py}
-    The script is designed for training a deepfake detection model using PyTorch. It loads and preprocesses a dataset, initializes a specified model (ResNet50 or EfficientNet), and trains it over a specified number of epochs, optimizing with cross-entropy loss and an Adam optimizer. During each epoch, the script computes accuracy, precision, recall, and F1-score metrics for model evaluation, and logs these metrics to a CSV file. The trained model state is saved to a file. Because the file serves as the backbone of our project, below its most important features and functions will be explained. \\
+    The script is designed for training a deepfake detection model using PyTorch. It loads and preprocesses a dataset, initializes a specified model (ResNet50 or EfficientNetB0), and trains it over a specified number of epochs, optimizing with cross-entropy loss and an Adam optimizer. During each epoch, the script computes accuracy, precision, recall, and F1-score metrics for model evaluation, and logs these metrics to a CSV file. The trained model state is saved to a file. Because the file serves as the backbone of our project, below its most important features and functions will be explained. \\
     \begin{itemize}
-        \item \texttt{prepare\_model} - This function sets up the entire training environment. It preprocesses the dataset using Torchvision transforms, applying resizing, tensor conversion, and normalization based on ImageNet standards to ensure compatibility with the input requirements of the models. The dataset is loaded using the custom \texttt{DeepFakeDataset} class, which organizes the images into "Real" and "Fake" categories for training and testing. The function dynamically selects the appropriate CNN architecture, ResNet50 or EfficientNet, and modifies it for binary classification by replacing the output layer. The function also initializes a cross-entropy loss function, well-suited for classification tasks, and configures the Adam optimizer for efficient gradient-based updates. Additionally, it determines whether to run the computations on a GPU or CPU using PyTorch’s torch.device utility. \\
+        \item \texttt{prepare\_model} - This function sets up the entire training environment. It preprocesses the dataset using Torchvision transforms, applying resizing, tensor conversion, and normalization based on ImageNet standards to ensure compatibility with the input requirements of the models. The dataset is loaded using the custom \texttt{DeepFakeDataset} class, which organizes the images into "Real" and "Fake" categories for training and testing. The function dynamically selects the appropriate CNN architecture, ResNet50 or EfficientNetB0, and modifies it for binary classification by replacing the output layer. The function also initializes a cross-entropy loss function, well-suited for classification tasks, and configures the Adam optimizer for efficient gradient-based updates. Additionally, it determines whether to run the computations on a GPU or CPU using PyTorch’s torch.device utility. \\
         \item \texttt{train} - This function is the core of the model training process. The train function is responsible for the iterative process of training the model. It operates in a batch-wise manner, leveraging the DataLoader created in the \texttt{prepare\_model} function to process input data in small subsets, or batches. This approach optimizes computational efficiency by balancing memory usage and processing speed. For each batch, the model predictions are computed, the error is quantified using the cross-entropy loss function, and the gradients are propagated backward through the network. These gradients are then utilized by the Adam optimizer, which updates the model’s weights based on the learning rate specified in \texttt{prepare\_model}. This iterative process gradually improves the model's performance by minimizing the error. Finally, the average training loss is computed and returned, providing a key indicator of the model's convergence and learning progress over the course of training. \\
         \item \texttt{evaluate} - To evaluate the model, the evaluate function is employed. This function operates in evaluation mode (\texttt{model.eval()}), disabling dropout and batch normalization updates for consistent predictions. It uses PyTorch to process the test data and Scikit-learn’s metrics, such as accuracy, precision, recall, and F1 score, to quantify the model’s performance. These metrics provide a comprehensive understanding of the model’s ability to correctly classify images as real or fake, making this function critical for performance analysis. \\
         \item \texttt{main} - The main function orchestrates the entire pipeline, managing the workflow of the project. It begins by invoking \texttt{prepare\_model} to set up the training environment. The core of the training process is handled by a for-loop that iterates over the specified number of epochs, where each epoch represents a complete pass through the training dataset. Within this loop, the train function is called to iteratively improve the model by updating its weights based on the training data, while the evaluate function assesses its accuracy and effectiveness on the test dataset after each epoch. Key results, including training loss and performance metrics are logged and saved to a CSV file. Once training is complete, the final state of the trained model is exported to a file.
@@ -107,7 +107,7 @@ In this section, the code will be described. For detailed explanations of all pa
     The script evaluates and visualizes the performance of a deepfake detection model. It loads a trained model, applies it to a test dataset, and generates predictions. Using these predictions, the script computes a confusion matrix, which is then visualized and saved as an image. This matrix offers insight into the model’s performance by showing counts of correct and incorrect predictions for each class (Real vs. Fake). The script scans for model files in a specified folder, allowing for batch evaluation of multiple trained models.
     \begin{itemize}
         \item \texttt{main\_eval} - The evaluation begins with the main\_eval function, which orchestrates the process. It first preprocesses the test dataset using a pipeline defined by Torchvision transforms. The images are resized to 224x224 pixels, converted into tensors, and normalized using ImageNet statistics. This ensures compatibility with the input requirements of the models. The test dataset is then loaded using the DataLoader, which batches the data for efficient processing. The script iterates over all trained model files in the specified directory. Each model is loaded using the load\_model function. Then the \texttt{evaluate\_and\_visualize} function is called. \\
-        \item \texttt{load\_model} - This function reconstructs the appropriate architecture (either ResNet50 or EfficientNet) and applies the saved parameters. The model is moved to the appropriate device (GPU or CPU), and its evaluation mode is activated via \texttt{model.eval()} to disable dropout and batch normalization updates, ensuring consistent predictions during testing. \\
+        \item \texttt{load\_model} - This function reconstructs the appropriate architecture (either ResNet50 or EfficientNetB0) and applies the saved parameters. The model is moved to the appropriate device (GPU or CPU), and its evaluation mode is activated via \texttt{model.eval()} to disable dropout and batch normalization updates, ensuring consistent predictions during testing. \\
         \item \texttt{evaluate\_and\_visualize} - The function performs inference on the test dataset using the loaded model. By iterating through each batch of test data, the model generates predictions, which are then compared against the true labels. The results are used to calculate a confusion matrix with Scikit-learn’s confusion\_matrix function. This matrix highlights the model's classification performance by showing the counts of true positives, true negatives, false positives, and false negatives. To enhance interpretability, the confusion matrix is visualized as a heatmap using Seaborn and Matplotlib. The heatmap provides a clear and intuitive representation of the model's strengths and weaknesses in detecting real and fake images. These visualizations are saved to a directory.
         
     \end{itemize}
@@ -120,7 +120,7 @@ In this section, the code will be described. For detailed explanations of all pa
 \begin{figure*}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{ef8.png}
-\caption{Confusion matrix for EfficientNet training after 8 epochs.}
+\caption{Confusion matrix for EfficientNetB0 training after 8 epochs.}
 \label{ef8}
 \end{figure*} 
 
@@ -134,7 +134,7 @@ In this section, the code will be described. For detailed explanations of all pa
 This section evaluates the performance of both models using metrics such as training loss, accuracy, precision, recall, and F1-score, alongside their respective confusion matrices. While these metrics have been calculated across all training epochs, the discussion here focuses on the final results after 8 epochs of training. Detailed metrics and confusion matrices for epochs 1, 3, 5, and 8 can be accessed \href{https://github.com/konradwojda/HYU-AI-G08/tree/main/results}{[here]}.  
 
 
-The decision to limit training to 8 epochs was driven by time constraints associated with Amazon SageMaker Studio Lab. Specifically, training ResNet50 required approximately 3.5 hours, whereas EfficientNet completed the same number of epochs in about 2 hours and 20 minutes. Based on the observed performance trends, 8 epochs provided sufficient convergence for both models within the available resources. For clarity, the reported results are presented with accuracy to four decimal places. Comprehensive scores for all metrics across epochs can be found \href{https://github.com/konradwojda/HYU-AI-G08/tree/main/results}{[here]}. Confusion matrices for  training after 8 epochs are shown in Figure~\ref{ef8} for EfficientNet and Figure~\ref{re8} for ResNet50. 
+The decision to limit training to 8 epochs was driven by time constraints associated with Amazon SageMaker Studio Lab. Specifically, training ResNet50 required approximately 3.5 hours, whereas EfficientNetB0 completed the same number of epochs in about 2 hours and 20 minutes. Based on the observed performance trends, 8 epochs provided sufficient convergence for both models within the available resources. For clarity, the reported results are presented with accuracy to four decimal places. Comprehensive scores for all metrics across epochs can be found \href{https://github.com/konradwojda/HYU-AI-G08/tree/main/results}{[here]}. Confusion matrices for training after 8 epochs are shown in Figure~\ref{ef8} for EfficientNetB0 and Figure~\ref{re8} for ResNet50. 
 
 \begin{figure*}[ht]
 \centering
@@ -143,7 +143,7 @@ The decision to limit training to 8 epochs was driven by time constraints associ
 \label{basic}
 \end{figure*} 
 
-\subsection*{EfficientNet}
+\subsection*{EfficientNetB0}
 \textit{Metrics:}  
 
 \begin{center}
@@ -189,13 +189,13 @@ Epoch & Loss & Accuracy & Precision & Recall & F1 Score \\
 \end{center} 
 
 \section*{Conclusion, Result Discussion}
-The evaluation results confirm that ResNet50 consistently outperforms EfficientNet across all key performance metrics during the training and evaluation phases. ResNet50 demonstrates superior accuracy, precision, recall, and F1 scores, achieving a balanced performance across these metrics. Its stability is evident from a smooth progression in metrics over epochs, maintaining high reliability in deepfake detection.
+The evaluation results confirm that ResNet50 consistently outperforms EfficientNetB0 across all key performance metrics during the training and evaluation phases. ResNet50 demonstrates superior accuracy, precision, recall, and F1 scores, achieving a balanced performance across these metrics. Its stability is evident from a smooth progression in metrics over epochs, maintaining high reliability in deepfake detection.
 
-EfficientNet, while competitive, exhibits slightly more variability in its performance metrics. Despite achieving commendable results, including a peak F1 score of 0.9227 at epoch 8, it falls short of matching ResNet50's robustness and precision. The training loss for EfficientNet is lower, suggesting effective learning, but its overall accuracy lags slightly, maxing out at 92.40%.
+EfficientNetB0, while competitive, exhibits slightly more variability in its performance metrics. Despite achieving commendable results, including a peak F1 score of 0.9227 at epoch 8, it falls short of matching ResNet50's robustness and precision. The training loss for EfficientNetB0 is lower, suggesting effective learning, but its overall accuracy lags slightly, maxing out at 92.40%.
 
-The confusion matrices further illustrate the distinction between the two models. ResNet50 achieves higher true positive and true negative counts while reducing false positives and false negatives, highlighting its superior predictive capacity. For instance, in the confusion matrix at epoch 8, ResNet50 correctly identifies 5,170 real images and 5,036 fake images, outperforming EfficientNet, which identifies 5,126 real images and 4,950 fake images in the same epoch.
+The confusion matrices further illustrate the distinction between the two models. ResNet50 achieves higher true positive and true negative counts while reducing false positives and false negatives, highlighting its superior predictive capacity. For instance, in the confusion matrix at epoch 8, ResNet50 correctly identifies 5,170 real images and 5,036 fake images, outperforming EfficientNetB0, which identifies 5,126 real images and 4,950 fake images in the same epoch.
 
-ResNet50 seems like the more reliable and effective model for deepfake detection in this project. Its consistently higher accuracy, stability across training epochs, and better handling of real versus fake classification solidify its role as the optimal choice for deployment. EfficientNet, although a strong competitor, could benefit from further tuning to reduce its variability and improve its recall. For future work, combining features or insights from both models might offer further improvements in deepfake detection capabilities.
+ResNet50 seems like the more reliable and effective model for deepfake detection in this project. Its consistently higher accuracy, stability across training epochs, and better handling of real versus fake classification solidify its role as the optimal choice for deployment. EfficientNetB0, although a strong competitor, could benefit from further tuning to reduce its variability and improve its recall. For future work, combining features or insights from both models might offer further improvements in deepfake detection capabilities.
 \begin{figure*}[ht]
 \centering
 \includegraphics[width=0.5\textwidth]{real1.jpg}
@@ -235,7 +235,7 @@ The main files of our deepfake-app and their tasks are:
 \href{https://pillow.readthedocs.io/en/stable/}{[Pillow]} \\
 \href{https://numpy.org/}{[Numpy]} \\ \\
 \textbf{Models:}  \\
-EfficientNet \\
+EfficientNetB0 \\
 ResNet50 \\ \\
 \textbf{Cloud Computing Resource:}  \\
 \href{https://studiolab.sagemaker.aws/}{[AWS SageMaker Studio Lab]} \\ \\
