final blog small edit

--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -41,9 +41,7 @@
 \section*{Introduction}
 In recent years, with the rapid advancement of AI and the ease of generating fake images, “deepfakes” have emerged as a significant threat. These digitally altered images, videos, and audios impact not only celebrities but also everyday individuals. This issue has gained particular attention in Korea, where deepfake crimes have reached unprecedented levels. The number of underage victims has increased 4.5 times, from 64 in 2022 to 288 over the past two years, while the total number of victims grew 3.7 times, rising from 212 to 781 during that same period according to \href{https://en.yna.co.kr/view/AEN20240828003100315}{[Yonhap News Agency]}. This alarming growth inspired us to focus on developing a solution to detect deepfake images in hopes to help combat this growing concern.
 
-Our objective is to build an accurate deepfake facial image detector by training and comparing the performance of various models. To accomplish this, we plan to utilize this \href{https://www.kaggle.com/datasets/manjilkarki/deepfake-and-real-images}{[Kaggle dataset]}, which contains approximately 190,000 facial images. We will split the dataset into two parts: 80\% for training and 20\% for validation. The models we intend to use include EfficientNetB0 and ResNet50, among others. Once trained, the models will be analyzed thoroughly to evaluate their effectiveness. Depending on the results, we may further extend the scope of our project.
-
-You can follow the progress of our project on our \href{https://github.com/konradwojda/HYU-AI-G08}{[Github]}.
+Our objective is to build an accurate deepfake facial image detector by training and comparing the performance of various models. To accomplish this, we utilized this \href{https://www.kaggle.com/datasets/manjilkarki/deepfake-and-real-images}{[Kaggle dataset]}, which contains approximately 190,000 facial images. We will split the dataset into two parts: 80\% for training and 20\% for validation. The models we intend to use include EfficientNetB0 and ResNet50, among others. Once trained, the models will be analyzed thoroughly to evaluate their effectiveness. Depending on the results, we may further extend the scope of our project.
 
 \section*{Dataset}
 For this project, we chose to use a Kaggle dataset created by Manjil Karki \href{https://www.kaggle.com/datasets/manjilkarki/deepfake-and-real-images}{"deepfake and real images"}. The dataset includes both manipulated (fake) and real images, originally sourced from the \href{https://sites.google.com/view/ltnghia/research/openforensics}{[OpenForensics Dataset]}. The dataset contains approximately 190,000 images, divided into three main directories: Train (70,000 fake, 70,000 real), Test (5,492 fake, 5,413 real), and Validation (19,600 fake, 19,800 real).
